--- a/app/build.gradle
+++ b/app/build.gradle
@@ -5,7 +5,7 @@ android {
     buildToolsVersion '28.0.3'
     defaultConfig {
         applicationId "com.example.safehomecoming"
-        minSdkVersion 21
+        minSdkVersion 23
         targetSdkVersion 28
         versionCode 1
         versionName "1.0"
@@ -22,7 +22,8 @@ android {
 
 dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
-    implementation 'androidx.appcompat:appcompat:1.1.0'
+//    implementation 'androidx.appcompat:appcompat:1.1.0'
+    implementation 'com.android.support:appcompat-v7:28.0.0'
     implementation 'androidx.constraintlayout:constraintlayout:1.1.3'
     testImplementation 'junit:junit:4.12'
     androidTestImplementation 'androidx.test:runner:1.2.0'
@@ -42,9 +43,29 @@ dependencies {
     implementation 'com.google.code.gson:gson:2.8.5'
     implementation 'com.google.android.material:material:1.0.0-beta01'
 
+    // 볼리
+    implementation 'com.android.volley:volley:1.1.0'
+
 //    implementation 'com.squareup.retrofit2:converter-scalars:2.5.0'
 //    implementation 'com.squareup.picasso:picasso:2.71828'
 
     // 로띠 애니메이션 라이브러리
     implementation 'com.airbnb.android:lottie:2.6.1'
+
+    // 글라이드 (당겨서 새로고침 추가)
+    implementation 'com.android.support:support-v4:28.0.0'
+
+    // FCM
+    implementation 'com.google.firebase:firebase-messaging:17.3.4'
+//    implementation 'com.google.firebase:firebase-admin:6.4.0'
+
+
+    // J soup
+    implementation 'org.jsoup:jsoup:1.11.3'
+    implementation 'com.google.firebase:firebase-database:19.2.0'
+
+
+    implementation 'com.kyleduo.switchbutton:library:2.0.0'
+
 }
+apply plugin: 'com.google.gms.google-services'
