--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -5,16 +5,60 @@
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.INTERNET" />
+    <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
+    <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
+    <uses-permission android:name="android.permission.CALL_PHONE" />
+    <uses-permission android:name="android.permission.DIAL_PHONE" />
+    <uses-permission android:name="android.permission.CAMERA" />
+    <uses-permission android:name="android.permission.VIBRATE" />
+    <uses-permission android:name="android.permission.WRITE_EXTERNAL_STORAGE" />
+    <uses-permission android:name="android.permission.READ_EXTERNAL_STORAGE" />
+
+    <uses-feature android:name="android.hardware.camera" />
 
     <application
         android:allowBackup="true"
-        android:icon="@mipmap/ic_launcher"
+        android:icon="@drawable/houses"
         android:label="@string/app_name"
         android:largeHeap="true"
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/AppTheme">
-        <activity android:name=".citizen.Activity_Select_Address"></activity>
+        <activity android:name=".Lostchild">
+
+        </activity>
+        <activity android:name=".WorkCheck" />
+
+        <receiver android:name=".ScreenReceiver" />
+
+        <service android:name=".ScreenService" />
+
+        <activity android:name=".Emergency_Mode" />
+        <activity android:name=".Activity_Citizeninfo" />
+        <activity android:name=".Activity_CCTV" />
+
+        <service
+            android:name=".service.MyFirebaseMessagingService"
+            android:enabled="true"
+            android:exported="true"
+            android:stopWithTask="false">
+            <intent-filter>
+                <action android:name="com.google.firebase.MESSAGING_EVENT" />
+                <action android:name="com.google.firebase.INSTANCE_ID_EVENT" />
+            </intent-filter>
+        </service>
+        <service
+            android:name=".service.MyFirebaseInstanceIDService"
+            android:enabled="true"
+            android:exported="true"
+            android:stopWithTask="false">
+            <intent-filter>
+                <action android:name="com.google.firebase.MESSAGING_EVENT" />
+                <action android:name="com.google.firebase.INSTANCE_ID_EVENT" />
+            </intent-filter>
+        </service>
+
+        <activity android:name=".citizen.Activity_Select_Address" />
         <activity android:name=".citizen.Activity_success_guard_request" />
         <activity android:name=".citizen.Activity_fail_request_guard" />
         <activity android:name=".citizen.Activity_Wait_for_request_guard_response" />
@@ -27,7 +71,7 @@
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="AIzaSyD8SEqU0isv6414TAp_SQFIu-KxZHCo3uw" />
-
+<!--        <meta-data android:name="com.google.android.gms.version" android:value="@integer/google_play_services_version"/>-->
         <activity android:name=".Activity_Login">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
@@ -38,6 +82,7 @@
         <activity android:name=".safeGurad.Activity_Main_Guard" />
         <activity android:name=".citizen.Activity_Main_Citizen" />
         <activity android:name=".citizen.Activity_DaumWebView" />
+        <activity android:name=".safeGurad.Activity_Guard_accept" />
     </application>
 
 </manifest>
